--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -26,6 +26,32 @@
 
   ##################################### END DEVELOPMENT ###################################
 
+  repos:
+    # id can either be an exact repo ID or a regex.
+    # If using a regex, it must start and end with a slash.
+    # Repo ID's are of the form {VCS hostname}/{org}/{repo name}, ex.
+    # github.com/runatlantis/atlantis.
+  - id: /.*/
+
+    # apply_requirements sets the Apply Requirements for all repos that match.
+    apply_requirements: [mergeable]
+
+    # workflow sets the workflow for all repos that match.
+    # This workflow must be defined in the workflows section.
+    workflow: [development, staging]
+
+    # allowed_overrides specifies which keys can be overridden by this repo in
+    # its atlantis.yaml file.
+    allowed_overrides: [apply_requirements, workflow]
+
+    # allow_custom_workflows defines whether this repo can define its own
+    # workflows. If false (default), the repo can only use server-side defined
+    # workflows.
+    allow_custom_workflows: true
+
+    # id can also be an exact match.
+  - id: github.com/cphikmawan/terraform-service
+
   ## WORKFLOW
   workflows:
     development:
